Generate schema for installer charts
