# apis/installer/v1alpha1/kube_ui_server_types.go
@@ -74,10 +74,38 @@ type KubeUiServerSpec struct {
 	// +optional
 	PodSecurityContext *core.PodSecurityContext `json:"podSecurityContext"`
 	ServiceAccount     ServiceAccountSpec       `json:"serviceAccount"`
-	Apiserver          WebHookSpec              `json:"apiserver"`
-	//+optional
-	EnableAnalytics bool       `json:"enableAnalytics"`
-	Monitoring      Monitoring `json:"monitoring"`
+	Apiserver          ApiserverSpec            `json:"apiserver"`
+	Monitoring         Monitoring               `json:"monitoring"`
+	Prometheus         PrometheusConfig         `json:"prometheus"`
+}
+
+type ApiserverSpec struct {
+	GroupPriorityMinimum       int32           `json:"groupPriorityMinimum"`
+	VersionPriority            int32           `json:"versionPriority"`
+	UseKubeapiserverFqdnForAks bool            `json:"useKubeapiserverFqdnForAks"`
+	Healthcheck                HealthcheckSpec `json:"healthcheck"`
+	ServingCerts               ServingCerts    `json:"servingCerts"`
+}
+
+type PrometheusConfig struct {
+	Address     string    `json:"address"`
+	BasicAuth   BasicAuth `json:"basicAuth"`
+	BearerToken string    `json:"bearerToken"`
+	ProxyURL    string    `json:"proxyURL"`
+	TLS         TLSConfig `json:"tls"`
+}
+
+type BasicAuth struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
+
+type TLSConfig struct {
+	Ca                    string `json:"ca"`
+	Cert                  string `json:"cert"`
+	Key                   string `json:"key"`
+	ServerName            string `json:"serverName"`
+	InsecureSkipTLSVerify bool   `json:"insecureSkipTLSVerify"`
 }
 
 // +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
